<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="tefor.chat.activities.EnviarMensaje">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/enviarMensaje_contenedorLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal">

                <AutoCompleteTextView
                    android:id="@+id/enviarMensaje_nickEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nick_hint"
                    android:inputType="text"
                    android:maxLength="8"
                    android:completionThreshold="2"/>

                <TextView
                    android:id="@+id/enviarMensaje_caracteresRestantesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/caracteres_restantes_demo"
                    android:textSize="12sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C8C9CB"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/normal"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <EditText
                        android:id="@+id/enviarMensaje_mensajeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:gravity="top|start"
                        android:background="@null"
                        android:hint="@string/mensaje_hint"/>

                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/enviarMensaje_enviarButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normal"
                    android:layout_gravity="end"
                    android:text="@string/enviar"
                    android:background="@color/verde"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</ScrollView>
